Fix homescreen banner on small screens

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -1285,7 +1285,7 @@ li a:hover {
 
 @media only screen and (max-width: 480px) {
   .banner {
-    margin-bottom: 90px;
+    margin-bottom: 80px;
   }
 
   .about-hr {
@@ -1300,7 +1300,7 @@ li a:hover {
 
   .section-header,
   .hero-header {
-    font-size: 24px;
+    font-size: 30px;
   }
 }
 
